# coderAI

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  app.py  cli.py  config.py  launch.py  launch_coderAI.bat  pyproject.toml  requirements.txt
.github/: properties.yml
.github/workflows/: python-app.yml
Helpmate-AI/: package-lock.json
Helpmate-AI/src/: App.jsx
Helpmate-AI/src/components/: CodeAnalysis.jsx
Helpmate-AI/src/services/: coderAIService.js
components/: agent_panel.py  code_review.py  github_integration.py  helpmate_bridge.py  main_panel.py  project_management.py  provider_config.py  sidebar.py
examples/: basic_agent_example.py  rag_example.py  workflow_example.py
framework/: __init__.py  constants.py  core.py  fn_call_converter.py  logger.py  registry.py  types.py  util.py
framework/agents/: __init__.py  agent_factory.py  assistant_agent.py  code_agent.py  research_agent.py  workflow_agent.py
framework/flow/: __init__.py  core.py  types.py  workflow.py
framework/memory/: __init__.py  core.py  memory_manager.py  types.py
framework/tools/: __init__.py  base_tools.py  file_tools.py  rag_tools.py  terminal_tools.py  web_tools.py
models/: base_model.py  huggingface_model.py  ollama_model.py
services/: agent_core.py  autoagent_core.py  code_analysis_service.py  code_visualization_service.py  collaboration_service.py  deployment_service.py  documentation_service.py  embedding_service.py  github_service.py  model_service.py  security_service.py  testing_service.py  vector_store_service.py
tests/: test_langflow_integration.py
utils/: api_utils.py  document_processor.py
