[project]
name = "coderai"
version = "0.1.0"
description = "An AI-powered coding assistant and project management tool"
requires-python = ">=3.10,<3.14"
license = "MIT"
keywords = ["ai", "code-assistant", "development-tools", "project-management"]
readme = "README.md"

dependencies = [
    "langchain~=0.3.10",
    "langchain-community~=0.3.10",
    "langchain-openai==0.2.12",
    "fastapi>=0.115.2,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "pydantic~=2.10.1",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.12,<1.0.0",
    "GitPython==3.1.43",
    "beautifulsoup4==4.12.3",
    "httpx>=0.27.0",
    "chromadb==0.5.23",
    "sqlalchemy[aiosqlite]>=2.0.38,<3.0.0",
    "loguru>=0.7.1,<1.0.0",
    "rich>=13.7.0,<14.0.0",
    "typer>=0.13.0,<1.0.0",
    "platformdirs>=4.2.0,<5.0.0",
    'pywin32==307; sys_platform == "win32"',
]

[project.urls]
Repository = "https://github.com/yourusername/coderAI"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.11.0",
    "ruff>=0.9.7,<0.10",
    "pre-commit>=3.7.0",
    "black>=24.1.0",
    "isort>=5.13.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::ResourceWarning"]

[tool.coverage.run]
source = ["coderai"]
omit = ["tests/*", "*/__init__.py"]

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "skip"
disable_error_code = ["type-var"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"